# rolodex.py

./: .gitignore  LICENSE  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
