[tool.poetry]
name = "rolodex"
version = "0.1.0+2308232323"
description = "Manage contacts' details, telephone numbers, emails and addresses."
authors = ["Rolodex Development Team <rolodex@axler8r.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
